--- a/fx.ipynb
+++ b/fx.ipynb
@@ -22,10 +22,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9f2a5f42-e80a-4989-8c57-0d92868ceae0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>adj_close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>fx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011-01-03</td>\n",
+       "      <td>1.335595</td>\n",
+       "      <td>1.336505</td>\n",
+       "      <td>1.325293</td>\n",
+       "      <td>1.335791</td>\n",
+       "      <td>1.335791</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011-01-04</td>\n",
+       "      <td>1.336005</td>\n",
+       "      <td>1.343093</td>\n",
+       "      <td>1.331824</td>\n",
+       "      <td>1.335684</td>\n",
+       "      <td>1.335684</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011-01-05</td>\n",
+       "      <td>1.332392</td>\n",
+       "      <td>1.332392</td>\n",
+       "      <td>1.312905</td>\n",
+       "      <td>1.332108</td>\n",
+       "      <td>1.332108</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011-01-06</td>\n",
+       "      <td>1.316101</td>\n",
+       "      <td>1.317037</td>\n",
+       "      <td>1.303373</td>\n",
+       "      <td>1.315686</td>\n",
+       "      <td>1.315686</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011-01-07</td>\n",
+       "      <td>1.298904</td>\n",
+       "      <td>1.302134</td>\n",
+       "      <td>1.293895</td>\n",
+       "      <td>1.297993</td>\n",
+       "      <td>1.297993</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3293</th>\n",
+       "      <td>2023-08-24</td>\n",
+       "      <td>1.086579</td>\n",
+       "      <td>1.087690</td>\n",
+       "      <td>1.081549</td>\n",
+       "      <td>1.086579</td>\n",
+       "      <td>1.086579</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3294</th>\n",
+       "      <td>2023-08-25</td>\n",
+       "      <td>1.079914</td>\n",
+       "      <td>1.083976</td>\n",
+       "      <td>1.076670</td>\n",
+       "      <td>1.079914</td>\n",
+       "      <td>1.079914</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3295</th>\n",
+       "      <td>2023-08-28</td>\n",
+       "      <td>1.079739</td>\n",
+       "      <td>1.082134</td>\n",
+       "      <td>1.079937</td>\n",
+       "      <td>1.079739</td>\n",
+       "      <td>1.079739</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3296</th>\n",
+       "      <td>2023-08-29</td>\n",
+       "      <td>1.082556</td>\n",
+       "      <td>1.085670</td>\n",
+       "      <td>1.078353</td>\n",
+       "      <td>1.082556</td>\n",
+       "      <td>1.082556</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3297</th>\n",
+       "      <td>2023-08-30</td>\n",
+       "      <td>1.086921</td>\n",
+       "      <td>1.094547</td>\n",
+       "      <td>1.085611</td>\n",
+       "      <td>1.086921</td>\n",
+       "      <td>1.086921</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3298 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date      Open      High       Low     Close  adj_close  Volume  \\\n",
+       "0    2011-01-03  1.335595  1.336505  1.325293  1.335791   1.335791       0   \n",
+       "1    2011-01-04  1.336005  1.343093  1.331824  1.335684   1.335684       0   \n",
+       "2    2011-01-05  1.332392  1.332392  1.312905  1.332108   1.332108       0   \n",
+       "3    2011-01-06  1.316101  1.317037  1.303373  1.315686   1.315686       0   \n",
+       "4    2011-01-07  1.298904  1.302134  1.293895  1.297993   1.297993       0   \n",
+       "...         ...       ...       ...       ...       ...        ...     ...   \n",
+       "3293 2023-08-24  1.086579  1.087690  1.081549  1.086579   1.086579       0   \n",
+       "3294 2023-08-25  1.079914  1.083976  1.076670  1.079914   1.079914       0   \n",
+       "3295 2023-08-28  1.079739  1.082134  1.079937  1.079739   1.079739       0   \n",
+       "3296 2023-08-29  1.082556  1.085670  1.078353  1.082556   1.082556       0   \n",
+       "3297 2023-08-30  1.086921  1.094547  1.085611  1.086921   1.086921       0   \n",
+       "\n",
+       "            fx  \n",
+       "0     EURUSD=X  \n",
+       "1     EURUSD=X  \n",
+       "2     EURUSD=X  \n",
+       "3     EURUSD=X  \n",
+       "4     EURUSD=X  \n",
+       "...        ...  \n",
+       "3293  EURUSD=X  \n",
+       "3294  EURUSD=X  \n",
+       "3295  EURUSD=X  \n",
+       "3296  EURUSD=X  \n",
+       "3297  EURUSD=X  \n",
+       "\n",
+       "[3298 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
