--- a/fx.ipynb
+++ b/fx.ipynb
@@ -241,20 +241,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0ee15492-95bb-43de-b99f-d8f511202794",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3298 entries, 0 to 3297\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column     Non-Null Count  Dtype         \n",
+      "---  ------     --------------  -----         \n",
+      " 0   Date       3298 non-null   datetime64[ns]\n",
+      " 1   Open       3298 non-null   float64       \n",
+      " 2   High       3298 non-null   float64       \n",
+      " 3   Low        3298 non-null   float64       \n",
+      " 4   Close      3298 non-null   float64       \n",
+      " 5   adj_close  3298 non-null   float64       \n",
+      " 6   Volume     3298 non-null   int64         \n",
+      " 7   fx         3298 non-null   object        \n",
+      "dtypes: datetime64[ns](1), float64(5), int64(1), object(1)\n",
+      "memory usage: 206.2+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "forex_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "823f5c1a-0e9c-4cd2-af32-637532d037e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected. Call `.close()` to terminate connection gracefully.\n",
+      "\n",
+      "Logged in to project, explore it here https://34.90.74.208:443/p/119\n",
+      "Connected. Call `.close()` to terminate connection gracefully.\n"
+     ]
+    }
+   ],
    "source": [
     "import hopsworks\n",
     "proj = hopsworks.login()\n",
@@ -263,20 +296,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2c619eca-bd19-4d7b-b90a-bb41bc391e99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fg = fs.get_or_create_feature_group(name=\"eurusd\", version=1, description=\"EUR/USD fx exchange rate\", primary_key=['fx','date'], event_time=\"date\")"
+    "fg = fs.get_or_create_feature_group(name=\"eurusd\", \n",
+    "                                    version=1, \n",
+    "                                    description=\"EUR/USD fx exchange rate\", \n",
+    "                                    primary_key=['fx','date'], \n",
+    "                                    event_time=\"date\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ef03e536-a466-4e55-9413-e84b5c583feb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "FeatureGroupWarning: The ingested dataframe contains upper case letters in feature names: `['Date', 'Open', 'High', 'Low', 'Close', 'Volume']`. Feature names are sanitized to lower case in the feature store.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3547aa3474e543dc8e05c3e251e126f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Uploading Dataframe: 0.00% |          | Rows 0/3298 | Elapsed Time: 00:00 | Remaining Time: ?"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching job: eurusd_1_offline_fg_backfill\n",
+      "Job started successfully, you can follow the progress at \n",
+      "https://34.90.74.208/p/119/jobs/named/eurusd_1_offline_fg_backfill/executions\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(<hsfs.core.job.Job at 0x7f0718cd6b60>, None)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fg.insert(forex_data)"
    ]
