--- a/training.ipynb
+++ b/training.ipynb
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_features = fg.select_except(features=[\"Date\",\"fx\"])"
+    "selected_features = fg.select_except(features=[\"Date\",\"fx\", \"volume\"])"
    ]
   },
   {
@@ -55,7 +55,7 @@
      "output_type": "stream",
      "text": [
       "Feature view created successfully, explore it at \n",
-      "https://34.90.74.208:443/p/119/fs/67/fv/fx/version/1\n"
+      "https://34.90.74.208:443/p/119/fs/67/fv/fx/version/2\n"
      ]
     }
    ],
@@ -123,7 +123,6 @@
        "      <th>low</th>\n",
        "      <th>adj_close</th>\n",
        "      <th>volume</th>\n",
-       "      <th>fx</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -135,7 +134,6 @@
        "      <td>1.079937</td>\n",
        "      <td>1.079739</td>\n",
        "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -145,17 +143,6 @@
        "      <td>1.102123</td>\n",
        "      <td>1.105522</td>\n",
        "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2019-10-18</td>\n",
-       "      <td>1.112718</td>\n",
-       "      <td>1.116196</td>\n",
-       "      <td>1.111506</td>\n",
-       "      <td>1.112718</td>\n",
-       "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -165,7 +152,6 @@
        "      <td>1.206913</td>\n",
        "      <td>1.212386</td>\n",
        "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -175,7 +161,15 @@
        "      <td>1.052155</td>\n",
        "      <td>1.067771</td>\n",
        "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2019-08-29</td>\n",
+       "      <td>1.108537</td>\n",
+       "      <td>1.109016</td>\n",
+       "      <td>1.105620</td>\n",
+       "      <td>1.108586</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -185,7 +179,15 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12985</th>\n",
+       "      <td>2016-03-16</td>\n",
+       "      <td>1.111000</td>\n",
+       "      <td>1.111099</td>\n",
+       "      <td>1.105800</td>\n",
+       "      <td>1.110901</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12986</th>\n",
@@ -195,7 +197,6 @@
        "      <td>1.127497</td>\n",
        "      <td>1.131183</td>\n",
        "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12987</th>\n",
@@ -205,7 +206,6 @@
        "      <td>1.043536</td>\n",
        "      <td>1.045697</td>\n",
        "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12988</th>\n",
@@ -215,17 +215,6 @@
        "      <td>1.374986</td>\n",
        "      <td>1.377695</td>\n",
        "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12989</th>\n",
-       "      <td>2015-10-21</td>\n",
-       "      <td>1.135602</td>\n",
-       "      <td>1.137800</td>\n",
-       "      <td>1.133800</td>\n",
-       "      <td>1.135396</td>\n",
-       "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12990</th>\n",
@@ -235,28 +224,27 @@
        "      <td>1.353858</td>\n",
        "      <td>1.357718</td>\n",
        "      <td>0</td>\n",
-       "      <td>EURUSD=X</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10392 rows × 7 columns</p>\n",
+       "<p>10392 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            date      open      high       low  adj_close  volume        fx\n",
-       "0     2023-08-28  1.079739  1.082134  1.079937   1.079739       0  EURUSD=X\n",
-       "1     2020-01-24  1.105534  1.106085  1.102123   1.105522       0  EURUSD=X\n",
-       "2     2019-10-18  1.112718  1.116196  1.111506   1.112718       0  EURUSD=X\n",
-       "3     2021-02-01  1.212283  1.213607  1.206913   1.212386       0  EURUSD=X\n",
-       "4     2023-01-03  1.067771  1.068262  1.052155   1.067771       0  EURUSD=X\n",
-       "...          ...       ...       ...       ...        ...     ...       ...\n",
-       "12986 2018-11-15  1.131363  1.135112  1.127497   1.131183       0  EURUSD=X\n",
-       "12987 2016-12-27  1.045577  1.046134  1.043536   1.045697       0  EURUSD=X\n",
-       "12988 2014-03-03  1.377543  1.379600  1.374986   1.377695       0  EURUSD=X\n",
-       "12989 2015-10-21  1.135602  1.137800  1.133800   1.135396       0  EURUSD=X\n",
-       "12990 2014-06-17  1.357700  1.358696  1.353858   1.357718       0  EURUSD=X\n",
+       "            date      open      high       low  adj_close  volume\n",
+       "0     2023-08-28  1.079739  1.082134  1.079937   1.079739       0\n",
+       "1     2020-01-24  1.105534  1.106085  1.102123   1.105522       0\n",
+       "3     2021-02-01  1.212283  1.213607  1.206913   1.212386       0\n",
+       "4     2023-01-03  1.067771  1.068262  1.052155   1.067771       0\n",
+       "6     2019-08-29  1.108537  1.109016  1.105620   1.108586       0\n",
+       "...          ...       ...       ...       ...        ...     ...\n",
+       "12985 2016-03-16  1.111000  1.111099  1.105800   1.110901       0\n",
+       "12986 2018-11-15  1.131363  1.135112  1.127497   1.131183       0\n",
+       "12987 2016-12-27  1.045577  1.046134  1.043536   1.045697       0\n",
+       "12988 2014-03-03  1.377543  1.379600  1.374986   1.377695       0\n",
+       "12990 2014-06-17  1.357700  1.358696  1.353858   1.357718       0\n",
        "\n",
-       "[10392 rows x 7 columns]"
+       "[10392 rows x 6 columns]"
       ]
      },
      "execution_count": 6,
@@ -308,10 +296,6 @@
        "      <td>1.105522</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.112718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1.212386</td>\n",
        "    </tr>\n",
@@ -320,8 +304,16 @@
        "      <td>1.067771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1.108586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12985</th>\n",
+       "      <td>1.110901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12986</th>\n",
@@ -336,10 +328,6 @@
        "      <td>1.377695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12989</th>\n",
-       "      <td>1.135396</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>12990</th>\n",
        "      <td>1.357718</td>\n",
        "    </tr>\n",
@@ -352,14 +340,14 @@
        "          close\n",
        "0      1.079739\n",
        "1      1.105522\n",
-       "2      1.112718\n",
        "3      1.212386\n",
        "4      1.067771\n",
+       "6      1.108586\n",
        "...         ...\n",
+       "12985  1.110901\n",
        "12986  1.131183\n",
        "12987  1.045697\n",
        "12988  1.377695\n",
-       "12989  1.135396\n",
        "12990  1.357718\n",
        "\n",
        "[10392 rows x 1 columns]"
@@ -376,8 +364,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "71dca5b0-f2d3-4a01-9788-7c037d513319",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished: Reading data from Hopsworks, using ArrowFlight (0.24s) \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = fv.get_batch_data(start_time=\"2023-09-13\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "eee963c6-9929-430a-a59d-813395de0c5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>adj_close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-09-15 00:00:00</td>\n",
+       "      <td>1.063830</td>\n",
+       "      <td>1.063830</td>\n",
+       "      <td>1.063830</td>\n",
+       "      <td>1.063830</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-09-14 00:00:00</td>\n",
+       "      <td>1.073537</td>\n",
+       "      <td>1.073537</td>\n",
+       "      <td>1.073537</td>\n",
+       "      <td>1.073537</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-09-14 11:53:00</td>\n",
+       "      <td>1.073422</td>\n",
+       "      <td>1.073422</td>\n",
+       "      <td>1.073422</td>\n",
+       "      <td>1.073422</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-09-15 10:21:00</td>\n",
+       "      <td>1.066894</td>\n",
+       "      <td>1.066894</td>\n",
+       "      <td>1.066894</td>\n",
+       "      <td>1.066894</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-09-15 18:39:00</td>\n",
+       "      <td>1.066780</td>\n",
+       "      <td>1.066780</td>\n",
+       "      <td>1.066780</td>\n",
+       "      <td>1.066780</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3394</th>\n",
+       "      <td>2023-09-15 03:39:00</td>\n",
+       "      <td>1.064849</td>\n",
+       "      <td>1.064849</td>\n",
+       "      <td>1.064849</td>\n",
+       "      <td>1.064849</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3395</th>\n",
+       "      <td>2023-09-15 03:34:00</td>\n",
+       "      <td>1.064963</td>\n",
+       "      <td>1.064963</td>\n",
+       "      <td>1.064963</td>\n",
+       "      <td>1.064963</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3396</th>\n",
+       "      <td>2023-09-15 01:18:00</td>\n",
+       "      <td>1.064396</td>\n",
+       "      <td>1.064396</td>\n",
+       "      <td>1.064396</td>\n",
+       "      <td>1.064396</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3397</th>\n",
+       "      <td>2023-09-15 07:08:00</td>\n",
+       "      <td>1.066212</td>\n",
+       "      <td>1.066212</td>\n",
+       "      <td>1.066212</td>\n",
+       "      <td>1.066212</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3398</th>\n",
+       "      <td>2023-09-15 01:19:00</td>\n",
+       "      <td>1.064396</td>\n",
+       "      <td>1.064396</td>\n",
+       "      <td>1.064396</td>\n",
+       "      <td>1.064396</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3399 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    date      open      high       low  adj_close  volume\n",
+       "0    2023-09-15 00:00:00  1.063830  1.063830  1.063830   1.063830       0\n",
+       "1    2023-09-14 00:00:00  1.073537  1.073537  1.073537   1.073537       0\n",
+       "2    2023-09-14 11:53:00  1.073422  1.073422  1.073422   1.073422       0\n",
+       "3    2023-09-15 10:21:00  1.066894  1.066894  1.066894   1.066894       0\n",
+       "4    2023-09-15 18:39:00  1.066780  1.066780  1.066780   1.066780       0\n",
+       "...                  ...       ...       ...       ...        ...     ...\n",
+       "3394 2023-09-15 03:39:00  1.064849  1.064849  1.064849   1.064849       0\n",
+       "3395 2023-09-15 03:34:00  1.064963  1.064963  1.064963   1.064963       0\n",
+       "3396 2023-09-15 01:18:00  1.064396  1.064396  1.064396   1.064396       0\n",
+       "3397 2023-09-15 07:08:00  1.066212  1.066212  1.066212   1.066212       0\n",
+       "3398 2023-09-15 01:19:00  1.064396  1.064396  1.064396   1.064396       0\n",
+       "\n",
+       "[3399 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32b0eafb-cc82-465b-b8d0-41f0131d1b93",
    "metadata": {},
    "outputs": [],
    "source": []
